k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataflow-redis
  namespace: dataflow
spec:
  selector:
    app: dataflow-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
